tests/integration/snapshots/integration__add__specify_alias.snap
---
source: tests/integration/add.rs
expression: "fs::read_to_string(project.path().join(\"wally.toml\")).unwrap()"
---
[package]
name = "biff/server-depends-on-shared"
version = "0.1.0"
license = "MIT"
realm = "server"
registry = "test-registries/primary-registry"

[dependencies]
b = "biff/minimal@0.1.0"
a = "biff/minimal-shared@0.1.0"
variant = "biff/minimal@0.1.0"

